--- a/proxy/package.json
+++ b/proxy/package.json
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+ HEAD
 {
   "name": "@polyglot/proxy",
   "version": "0.1.0",
@@ -18,5 +18,5 @@
     "test": "echo \"Proxy tests complete.\""
   }
 }
-=======
->>>>>>> 8520d26 (save and exit the editor to proceed with the commit.)
+
+ 8520d26 (save and exit the editor to proceed with the commit.)
