--- a/web/package.json
+++ b/web/package.json
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 {
   "name": "@polyglot/web",
   "version": "0.1.0",
@@ -13,5 +12,5 @@
     "test": "echo \"Web tests complete.\""
   }
 }
-=======
->>>>>>> 8520d26 (save and exit the editor to proceed with the commit.)
+
+ 8520d26 (save and exit the editor to proceed with the commit.)
