--- a/api/package.json
+++ b/api/package.json
@@ -6,20 +6,11 @@
   "scripts": {
     "dev": "node server.js",
     "start": "node server.js",
-    "build": "echo \"API build complete.\"",
-    "lint": "echo \"API lint complete.\"",
-    "test": "echo \"API tests complete.\""
+    "build": "echo 'API build complete.'",
+    "lint": "echo 'API lint complete.'",
+    "test": "echo 'API tests complete.'"
   },
   "dependencies": {
     "express": "^4.19.2"
-
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "echo \"Running API dev server...\" && sleep infinity",
-    "build": "echo \"API build complete.\"",
-    "lint": "echo \"API lint complete.\"",
-    "test": "echo \"API tests complete.\""
- 
   }
 }
