--- a/proxy/package.json
+++ b/proxy/package.json
@@ -1,4 +1,3 @@
- 
 {
   "name": "@polyglot/proxy",
   "version": "0.1.0",
@@ -7,15 +6,8 @@
   "scripts": {
     "dev": "node index.js",
     "start": "node index.js",
-
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "echo \"Running Proxy dev server...\" && sleep infinity",
- 
-    "build": "echo \"Proxy build complete.\"",
-    "lint": "echo \"Proxy lint complete.\"",
-    "test": "echo \"Proxy tests complete.\""
+    "build": "echo 'Proxy build complete.'",
+    "lint": "echo 'Proxy lint complete.'",
+    "test": "echo 'Proxy tests complete.'"
   }
 }
-
