Fix malformed JSON in proxy/package.json

--- a/proxy/package.json
+++ b/proxy/package.json
@@ -2,6 +2,7 @@
   "name": "@polyglot/proxy",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "node index.js",
@@ -9,5 +10,7 @@
     "build": "echo 'Proxy build complete.'",
     "lint": "echo 'Proxy lint complete.'",
     "test": "echo 'Proxy tests complete.'"
-  }
+  },
+  "dependencies": {}
 }
+
