--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "@polyglot/api",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "dev": "node server.js",
@@ -14,3 +15,4 @@
     "express": "^4.19.2"
   }
 }
+
