--- a/api/package.json
+++ b/api/package.json
@@ -7,12 +7,11 @@
   "scripts": {
     "dev": "node server.js",
     "start": "node server.js",
-    "build": "echo 'API build complete.'",
-    "lint": "echo 'API lint complete.'",
-    "test": "echo 'API tests complete.'"
+    "build": "echo \"API build complete.\"",
+    "lint": "echo \"API lint complete.\"",
+    "test": "echo \"API tests complete.\""
   },
   "dependencies": {
     "express": "^4.19.2"
   }
 }
-
