Fix Vercel deployment environment mismatch in GitHub Actions
- Add --prod flag to vercel build command in CI/CD pipeline
- This ensures build and deploy target the same environment (production)
- Resolves: vercel --prebuilt environment mismatch error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
           npm i -g vercel
           cd web
           vercel pull --yes --token $VERCEL_TOKEN
-          vercel build --token $VERCEL_TOKEN
+          vercel build --prod --token $VERCEL_TOKEN
           vercel deploy --prebuilt --token $VERCEL_TOKEN --prod
 
   # ========================================================================
