Add explicit comment for Vercel build --prod flag
- Make it crystal clear that --prod flag is required
- Prevent accidental removal of this critical flag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,8 @@ jobs:
           npm i -g vercel
           cd web
           vercel pull --yes --token $VERCEL_TOKEN
-          vercel build --prod --token $VERCEL_TOKEN  # Now builds for production!
+          # CRITICAL: Build for production environment to match deployment target
+          vercel build --prod --token $VERCEL_TOKEN
           vercel deploy --prebuilt --token $VERCEL_TOKEN --prod
 
   # ========================================================================
