Switch to single-step Vercel deployment
- Use 'vercel --prod' instead of separate build/deploy steps
- Eliminates environment mismatch possibility entirely
- Simpler and more reliable approach

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,9 +111,8 @@ jobs:
           npm i -g vercel
           cd web
           vercel pull --yes --token $VERCEL_TOKEN
-          # CRITICAL: Build for production environment to match deployment target
-          vercel build --prod --token $VERCEL_TOKEN
-          vercel deploy --prebuilt --token $VERCEL_TOKEN --prod
+          # Use single-step deployment to avoid environment mismatch entirely
+          vercel --prod --token $VERCEL_TOKEN
 
   # ========================================================================
   # Deploy API (Render)
