Add timestamp to API verification step
- Makes it clear when the FIXED workflow runs
- Should show 'Using FIXED workflow (no pnpm install --frozen-lockfile)'
- Helps distinguish from old cached workflow runs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,6 +139,8 @@ jobs:
 
       - name: 📦 Verify API Workspace
         run: |
+          echo "🕒 Workflow run at: $(date)"
+          echo "🔧 Using FIXED workflow (no pnpm install --frozen-lockfile)"
           if [ -d "api" ]; then
             echo "✅ API workspace found"
             echo "📋 API package.json:"
