--- a/api/package.json
+++ b/api/package.json
@@ -9,9 +9,7 @@
     "start": "node server.js",
     "build": "echo \"API build complete.\"",
     "lint": "echo \"API lint complete.\"",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test": "echo \"API tests complete.\""
   },
   "dependencies": {
     "express": "^4.19.2"
