Fix: Convert Docker image repository owner to lowercase
- Docker requires lowercase repository names
- Convert 'Backerjr' to 'backerjr' before building images
- Fixes 'repository name must be lowercase' error
- Images will now be: ghcr.io/backerjr/{api,web,proxy}:latest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,9 +189,10 @@ jobs:
 
       - name: Build & Push Images
         run: |
+          OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
           for ws in api web proxy; do
             if [ -f "$ws/Dockerfile" ]; then
-              IMAGE=ghcr.io/${{ github.repository_owner }}/$ws:latest
+              IMAGE=ghcr.io/$OWNER/$ws:latest
               echo "🚀 Building and pushing $IMAGE"
               docker build -t $IMAGE $ws
               docker push $IMAGE
