--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,6 +173,11 @@ jobs:
     needs: [setup-build-test]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
+    
+    permissions:
+      contents: read
+      packages: write
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
